# cpp_timer

./: .gitignore  CMakeLists.txt
inc/: timer.hpp
test/: main.cpp  test.cpp  test.h  wait_lock.h
